# lucide-svg-rs

./: CHANGELOG.md  Cargo.toml
.github/workflows/: release.yml
