[package]
name = "lucide-svg-rs"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust library and CLI tool for downloading SVG icons from the Lucide icon library with interactive selection and preview capabilities."
repository = "https://github.com/crabtools-rs/lucide-svg-rs"
readme = "README.md"
keywords = ["icons", "lucide", "ui", "cli"]
categories = ["web-programming", "gui"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[workspace.metadata.dist]
cargo-dist-version = "0.20.0"
ci = ["github"]
installers = ["shell", "powershell"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-D", "warnings", "--cfg", "docsrs"]
